bin_PROGRAMS = xarman

xarman_SOURCES = log.cc debug.cc ressourcemanager.cc surfacemanager.cc  data.cc xarman.cc video.cc menu.cc game.cc soundmanager.cc sound.cc

# none of these are installed - here for dist

noinst_HEADERS = log.hh debug.hh ressourcemanager.hh surfacemanager.hh data.hh video.hh menu.hh types.hh game.hh soundmanager.hh sound.hh
