# data/graphics/Makefile.am

pkgdatadir = $(datadir)/games/@PACKAGE@/graphics/

pkgdata_DATA = BD1F1.png  BLUEDOT.png   ICON13.png  ICON7.png  N3.png     RD3F1.png \
               BD1F2.png  BLUEKEYS.png  ICON14.png  ICON8.png  N4.png     RD3F2.png \
               BD1F3.png  BLUESIDE.png  ICON15.png  ICON9.png  N5.png     RD3F3.png \
               BD2F1.png  BSCAN1.png    ICON16.png  LAND1.png  N6.png     RD4F1.png \
               BD2F2.png  BSCAN2.png    ICON17.png  LAND2.png  N7.png     RD4F2.png \
               BD2F3.png  BSCAN3.png    ICON18.png  LAND3.png  N8.png     RD4F3.png \
               BD3F1.png  CHECK2.png    ICON1.png   LAND.png  RD1F1.png  REDDOT.png \
               BD3F2.png  CHECK.png    ICON2.png   MENU2.png RD1F2.png  REDKEYS.png \
               BD3F3.png  ICON0.png     ICON3.png   MENU.png RD1F3.png  REDSIDE.png \
               BD4F1.png  ICON10.png    ICON4.png   MINE.png RD2F1.png  RSCAN1.png \
               BD4F2.png  ICON11.png    ICON5.png   N1.png  RD2F2.png  RSCAN2.png \
               BD4F3.png  ICON12.png    ICON6.png   N2.png  RD2F3.png  RSCAN3.png 

EXTRA_DIST = $(pkgdata_DATA)


